# report-newletter

./: main.py
dashboard-newsletter/: README.md  app.py  data_loader.py  main.py  pyproject.toml
dashboard-newsletter/src/dashboard_newsletter/: main.py
