[tool.poetry]
name = "dashboard-newsletter"
version = "0.1.0"
description = ""
authors = ["hudson_silverio <hudsonpksj@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pandas = ">=1.4.0,<3"
streamlit = ">=1.54.0,<2.0.0"
plotly = ">=6.5.2,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"